# babylon_tts

./: .gitignore  .gitmodules  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/babylon_tts_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: babylon_tts.podspec
ios/Classes/: babylon_tts.c
lib/: babylon_tts.dart  babylon_tts_bindings_generated.dart
lib/src/: babylon.dart  bindings.dart
linux/: CMakeLists.txt
macos/: babylon_tts.podspec  libbabylon.dylib
macos/Classes/: babylon_tts.c
macos/lib/: libbabylon.dylib  libonnxruntime.dylib
macos/lib/libonnxruntime.1.18.1.dylib.dSYM/Contents/: Info.plist
src/: CMakeLists.txt  babylon_tts.c
windows/: CMakeLists.txt
